--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@reduxjs/toolkit": "^2.11.0",
     "apexcharts": "^4.1.0",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
+    "lodash-es": "^4.17.21",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
@@ -28,13 +30,16 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
+    "sweetalert2": "^11.26.3",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.8",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
