--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "apexcharts": "^4.1.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "flatpickr": "^4.6.13",
     "lodash-es": "^4.17.21",
     "react": "^19.0.0",
@@ -34,11 +35,14 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "sweetalert2": "^11.26.3",
     "swiper": "^11.2.3",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
